# SStudData

./: CMakeLists.txt  Data.txt  main.cpp
.cache/clangd/index/: SStudData.cpp.881478C69841A6FB.idx  SStudData.h.5D36F3C2EFCC58ED.idx  main.cpp.62635D4457E797A4.idx
include/: SStudData.h
src/: SStudData.cpp
